// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addDirectory() adds all files in a directory to the config map "exclude" exclusion via globs 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "file1.txt": "Hello, world!",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": Object {
      "name": "test-my-config-map-c8eaefa4",
    },
  },
]
`;

exports[`addDirectory() adds all files in a directory to the config map "prefix" can be used to prefix keys" 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "prefix.file1.txt": "Hello, world!",
      "prefix.file2.html": "<html>Hey</html>",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": Object {
      "name": "test-my-config-map-c8eaefa4",
    },
  },
]
`;

exports[`addDirectory() adds all files in a directory to the config map keys are based on file names 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "file1.txt": "Hello, world!",
      "file2.html": "<html>Hey</html>",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": Object {
      "name": "test-my-config-map-c8eaefa4",
    },
  },
]
`;

exports[`addDirectory() adds all files in a directory to the config map sub-directories are skipped 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "file1.txt": "Hello, world!",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": Object {
      "name": "test-my-config-map-c8eaefa4",
    },
  },
]
`;

exports[`addFile() adds local files to the config map 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "file1.txt": "Hello, world!",
      "hey-there": "<html>Hey</html>",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": Object {
      "name": "test-my-config-map-c8eaefa4",
    },
  },
]
`;

exports[`can grant permissions on imported 1`] = `
Array [
  Object {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "Role",
    "metadata": Object {
      "name": "test-role-c8eba390",
    },
    "rules": Array [
      Object {
        "apiGroups": Array [
          "",
        ],
        "resourceNames": Array [
          "name",
        ],
        "resources": Array [
          "configmaps",
        ],
        "verbs": Array [
          "get",
          "list",
          "watch",
        ],
      },
    ],
  },
]
`;
